<resources>
    <string name="app_name">AvoQR</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="titleDemo">Title</string>
    <string name="dummy_message">dummy message</string>


    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</string>
    <string name="name_of_the_productor">Name of the productor</string>
    <string name="add_product">Add product</string>
    <string name="rfc">RFC</string>
    <string name="data_of_product">Data of owner</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="product_info">Product info</string>
    <string name="varierty">Varierty</string>
    <string name="weight">Weight</string>
    <string name="no_of_boxes">No. of boxes</string>
    <string name="certifications">Certifications</string>
    <string name="phytosanitary">phytosanitary</string>
    <string name="others">Others</string>
    <string name="save">Save</string>

</resources>