<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textAdd"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/data_of_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/name_of_the_productor"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/textAdd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutRFC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/rfc"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRFC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/address"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutRFC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutContact"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/contact"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutRFC"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textProduct"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutAddress"
            android:layout_marginTop="@dimen/common_padding_default"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutLote"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="Batch"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/textProduct"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutVariedad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/varierty"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/textProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextVariedad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/weight"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutVariedad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextLayoutBoxes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/no_of_boxes"
            android:paddingStart="@dimen/common_padding_micro"
            android:paddingEnd="@dimen/common_padding_micro"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutVariedad"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextBoxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textCertificates"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/certifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLayoutBoxes"
            android:layout_marginTop="@dimen/common_padding_default"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fitoSanotaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textCertificates"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/phytosanitary"
            app:icon="@drawable/ic_book"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otherCertificate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fitoSanotaryButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:text="@string/others"
            app:icon="@drawable/ic_book"
            android:layout_marginTop="@dimen/common_padding_default"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/otherCertificate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>